@@ -5,6 +5,7 @@ import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
 import dev.rosewood.rosegarden.command.framework.CommandContext;
 import dev.rosewood.rosegarden.command.framework.InputIterator;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class GreedyStringArgumentHandler extends ArgumentHandler<String> {
@@ -27,7 +28,7 @@ public class GreedyStringArgumentHandler extends ArgumentHandler<String> {
 
     @Override
     public List<String> suggest(CommandContext context, Argument argument, String[] args) {
-        return List.of(argument.parameter());
+        return Collections.singletonList(argument.parameter());
     }
 
 }
