@@ -29,7 +29,7 @@ public class PlayerArgumentHandler extends ArgumentHandler<Player> {
     public List<String> suggest(CommandContext context, Argument argument, String[] args) {
         return Bukkit.getOnlinePlayers().stream()
                 .map(Player::getName)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
