@@ -4,11 +4,12 @@ import dev.rosewood.rosegarden.command.framework.Argument;
 import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
 import dev.rosewood.rosegarden.command.framework.CommandContext;
 import dev.rosewood.rosegarden.command.framework.InputIterator;
+import java.util.Arrays;
 import java.util.List;
 
 public class TestArgumentHandler extends ArgumentHandler<String> {
 
-    public static final List<String> SUGGESTIONS = List.of("apple", "banana", "cherry", "applause", "bandana", "chair");
+    public static final List<String> SUGGESTIONS = Arrays.asList("apple", "banana", "cherry", "applause", "bandana", "chair");
 
     public TestArgumentHandler() {
         super(String.class);
